run_fakeapp reference the fixed fakeapp now, updating notebook for comparison purpose

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ __pycache__/
 
 # Special folders and vscode
 job_decomposer/
+performance_data/performance_data/tmp/
 jobmodel
 .vscode/
 .VSCodeCounter/
