updating unit tests to adapt new decomposition format

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
   "python.testing.unittestArgs": [
     "-v",
     "-s",
-    "./performance_data",
+    "./app_decomposer",
     "-p",
     "test_*.py"
   ],
