updating performance_data package with improved unittests, docstrings and some minor fixes.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
   "python.testing.unittestArgs": [
     "-v",
     "-s",
-    "./cluster_simulator",
+    "./performance_data",
     "-p",
     "test_*.py"
   ],
