Fix refactor of Tier class with max_bandwidth and provided arguments overriding YAML config file

--- a/cluster_simulator/tests/test_data/config.yaml
+++ b/cluster_simulator/tests/test_data/config.yaml
@@ -27,5 +27,7 @@ tiers:
 
 ephemeral_tier:
   name: ephemeral
+    #   (self, env, name, persistent_tier, max_bandwidth, capacity=80e9)
+  persistent_tier: tier1
   capacity: 1.0e+11
   max_bandwidth: 100.e+6
