feat(tests): enhance and complete PhaseFeatures class tests
This commit enhances the existing tests for the PhaseFeatures class and adds new tests to cover more scenarios. The tests now cover all the main functionalities of the PhaseFeatures class, including the initialization with different operations (read, write), different patterns (sequential, random), and the inclusion of bandwidth. This ensures that the PhaseFeatures class works as expected in various scenarios and improves the overall test coverage of the codebase.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,5 +25,11 @@
     ],
     "compounds": []
   },
-  "editor.fontSize": 15
+  "editor.fontSize": 15,
+  "editor.wordWrap": "bounded",
+  "editor.wordWrapColumn": 99,
+  "[python]": {
+    "editor.defaultFormatter": "ms-python.autopep8"
+  },
+  "python.formatting.provider": "none"
 }
