fix: Resolve dependency issues and enhance parallel chain handling in Workflow class
- Fixed an issue with premature job scheduling due to incorrect dependency checks.
- Refactored methods for more efficient identification of parallel job chains.
- Improved debugging with detailed logging across various functions.
- Corrected the triggering of job completion events for consistent scheduling.
- Optimized logic in are_chain_dependencies_resolved for accurate readiness assessment of parallel chains.
- Conducted code cleanup and enhanced documentation for better readability and clarity.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
   "python.testing.unittestArgs": [
     "-v",
     "-s",
-    "./app_decomposer",
+    "./cluster_simulator",
     "-p",
     "test_*.py"
   ],
